--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ hr.rounded {
   color: grey;
 }
 .text-lightblue {
-  color:#FFBB55;
+  color: white;
 }
 
 .roundBorder {
@@ -202,9 +202,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #525f7f;
+  background: black;
   text-align: left;
-  background: url('./assets/img/bg.jpg');
+  /* background: url('./assets/img/bg.jpg'); */
   background-size: cover!important;
   background-repeat: no-repeat!important;
   background-position: center top!important;
@@ -17178,10 +17178,11 @@ td.rdtYear:hover {
   width: 1%; }
 
 .custom-button {
-  background: linear-gradient(269.42deg, #CD8416 33.5%, #FFBB55 69.21%);
+  background: linear-gradient(249.51deg, #00FFA3 -6.39%, #2B56EF 181.32%);
+  mix-blend-mode: normal;
+  border-radius: 12px;
   mix-blend-mode: normal;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
   border: none;
   color: '#000';
   font-weight: 'bold';
@@ -17189,38 +17190,101 @@ td.rdtYear:hover {
 }
 
 .card {
-  color: #FFBB55;
-  background: rgba(255, 255, 255, 0.08);
+  color: white;
+  background: #0E1716;
   border-radius: 15px;
+  /* display: flex;
+  flex-direction: row; */
 }
 
 .custom-header {
   display: grid;
-  justify-content: center;
-  padding-top: 2rem;
+  justify-content: space-between;
+  padding: 0.5rem;
   gap: 1rem;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
 }
 
-@media (min-width: 576px) {
+.hd-title {
+  margin: 10px !important;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  /* identical to box height, or 188% */
+  color: #05EDAC;
+  cursor: pointer;
+}
+
+.hd-title:hover {
+  color: white;
+}
+
+.main_content {
+  padding-top: 60px;
+  display: flex;
+}
+
+.menu {
+  width: 250px;
+  background: #15151B;
+  border-top-right-radius: 12px;
+  margin-top: 15px;
+  position: fixed;
+  height: 100%;
+}
+
+.menu-item {
+  display: flex;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.menu-item-text {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 30px;
+  color: #FFFFFF;
+
+  padding-left: 10px;
+}
+
+.content {
+  padding-left: 250px;
+}
+
+@media (max-width: 576px) {
   .custom-header {
-    display: flex;
-    justify-content: space-between;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    flex-direction: column!important;
+
+
     align-items: center;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-  } 
+    /* padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem; */
+  }
+
+  .hd-title {
+    font-size: 10px;
+  }
 }
 
 .MuiSlider-thumb {
-  color: #CD8416;
+  color: #05EDAC;
 }
 .MuiSlider-rail {
   color:rgba(255, 255, 255, 0.15);
 }
 .MuiSlider-track {
-  color: #CD8416;
+  color: #05EDAC;
 }
 
 .custom-input {
