--- a/src/App.css
+++ b/src/App.css
@@ -325,7 +325,11 @@ svg {
   vertical-align: middle; }
 
 table {
-  border-collapse: collapse; }
+  border-collapse: collapse;
+  border-color: #313131;
+  font-size: 14px;
+  border-radius: 12px;
+}
 
 caption {
   padding-top: 1rem;
@@ -1194,12 +1198,12 @@ pre {
   .table td {
     padding: 1rem;
     vertical-align: top;
-    border-top: 0.0625rem solid #dee2e6; }
+    border-top: 0.0625rem solid #313131; }
   .table thead th {
     vertical-align: bottom;
-    border-bottom: 0.125rem solid #dee2e6; }
+    border-bottom: 0.125rem solid #313131; }
   .table tbody + tbody {
-    border-top: 0.125rem solid #dee2e6; }
+    border-top: 0.125rem solid #313131; }
 
 .table-sm th,
 .table-sm td {
@@ -17242,6 +17246,7 @@ td.rdtYear:hover {
 
 .menu-item {
   display: flex;
+  align-items: center;
   padding: 10px;
   cursor: pointer;
 }
@@ -17272,6 +17277,46 @@ td.rdtYear:hover {
 
 .mobileBoard {
   display: none;
+}
+
+.faqheading {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #05EDAC;
+  text-align: left;
+}
+
+.amount {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #FFFFFF;
+  margin-top: 10px;
+}
+
+.accordion-button {
+  background: transparent;
+  border: none;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+.accordion {
+  background: transparent !important;
+}
+
+.accordion-item {
+  background: #15151B !important;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 20px 0px;
 }
 
 @media (max-width: 576px) {
@@ -17339,14 +17384,14 @@ td.rdtYear:hover {
   background: black;
   border-radius: 8px;
   border: none;
-  color: #2E2E2E;
+  color: white;
 }
 
 .custom-input:focus {
   background: black;
   border-radius: 8px;
   border: none;
-  color: #2E2E2E;
+  color: white;
 }
 
 .custom-footer {
@@ -17372,3 +17417,69 @@ td.rdtYear:hover {
     font-weight: bold;
   }
 }
+
+
+.accordion-button > #plus {
+  display: none;
+}
+.accordion-button > #minus {
+  display: block;
+}
+
+
+.accordion-button.collapsed > #plus {
+  display: block;
+}
+
+.accordion-button.collapsed > #minus {
+  display: none;
+}
+
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+  min-width: 350px;
+}
+table tr th,
+table tr td {
+  border-right: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
+  padding: 5px;
+}
+
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 1px solid #bbb;
+}
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 1px solid #bbb;
+}
+table tr th {
+  background: #eee;
+  text-align: left;
+  border-top: solid 1px #bbb;
+}
+
+/* top-left border-radius */
+table tr:first-child th:first-child {
+  border-top-left-radius: 6px;
+}
+
+/* top-right border-radius */
+table tr:first-child th:last-child {
+  border-top-right-radius: 6px;
+}
+
+/* bottom-left border-radius */
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 6px;
+}
+
+/* bottom-right border-radius */
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 6px;
+}
+
+
