--- a/src/App.css
+++ b/src/App.css
@@ -325,10 +325,12 @@ svg {
   vertical-align: middle; }
 
 table {
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0px;
+  border-width: 0px;
   border-color: #313131;
   font-size: 14px;
-  border-radius: 12px;
+  border-radius: 6px !important;
 }
 
 caption {
@@ -1189,7 +1191,7 @@ pre {
   .offset-xl-11 {
     margin-left: 91.66667%; } }
 
-.table {
+/* .table {
   width: 100%;
   margin-bottom: 1rem;
   color: #525f7f;
@@ -1203,9 +1205,9 @@ pre {
     vertical-align: bottom;
     border-bottom: 0.125rem solid #313131; }
   .table tbody + tbody {
-    border-top: 0.125rem solid #313131; }
+    border-top: 0.125rem solid #313131; } */
 
-.table-sm th,
+/* .table-sm th,
 .table-sm td {
   padding: 0.3rem; }
 
@@ -1469,9 +1471,9 @@ pre {
     background-color: rgba(255, 255, 255, 0.05); }
   .table-dark.table-hover tbody tr:hover {
     color: #fff;
-    background-color: rgba(255, 255, 255, 0.075); }
+    background-color: rgba(255, 255, 255, 0.075); } */
 
-@media (max-width: 575.98px) {
+/* @media (max-width: 575.98px) {
   .table-responsive-sm {
     display: block;
     width: 100%;
@@ -1513,7 +1515,7 @@ pre {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch; }
   .table-responsive > .table-bordered {
-    border: 0; }
+    border: 0; } */
 
 .form-control {
   display: block;
@@ -16088,7 +16090,6 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 
 .table-colors .swatch,
 .table-colors:first-child .swatch {
-  /* float: left; */
   height: 40px;
   width: 40px;
   margin-right: 20px;
@@ -16102,7 +16103,6 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
 
 .table-colors .lozenge,
 .table-colors:first-child .lozenge {
-  /* float: left; */
   margin: 5px 10px 0 0;
   font-size: 10px;
   display: inline-block;
@@ -17242,12 +17242,13 @@ td.rdtYear:hover {
   margin-top: 15px;
   position: fixed;
   height: 100%;
+  padding: 10px;
 }
 
 .menu-item {
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 15px;
   cursor: pointer;
 }
 
@@ -17436,50 +17437,43 @@ td.rdtYear:hover {
 }
 
 
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  min-width: 350px;
-}
 table tr th,
 table tr td {
-  border-right: 1px solid #bbb;
+  /* border-right: 1px solid #bbb;
   border-bottom: 1px solid #bbb;
+  border-top: 1px solid #bbb; */
   padding: 5px;
 }
 
-table tr th:first-child,
+/* table tr th:first-child,
 table tr td:first-child {
   border-left: 1px solid #bbb;
-}
-table tr th:first-child,
-table tr td:first-child {
-  border-left: 1px solid #bbb;
-}
-table tr th {
+} */
+
+/* table tr th {
   background: #eee;
   text-align: left;
   border-top: solid 1px #bbb;
-}
+} */
 
 /* top-left border-radius */
-table tr:first-child th:first-child {
-  border-top-left-radius: 6px;
+table tr:first-child td:first-child {
+  border-top-left-radius: 8px;
 }
 
 /* top-right border-radius */
-table tr:first-child th:last-child {
-  border-top-right-radius: 6px;
+table tr:first-child td:last-child {
+  border-top-right-radius: 8px;
 }
 
 /* bottom-left border-radius */
 table tr:last-child td:first-child {
-  border-bottom-left-radius: 6px;
+  border-bottom-left-radius: 8px;
 }
 
 /* bottom-right border-radius */
 table tr:last-child td:last-child {
-  border-bottom-right-radius: 6px;
+  border-bottom-right-radius: 8px;
 }
 
 
