--- a/src/App.css
+++ b/src/App.css
@@ -17237,12 +17237,15 @@ td.rdtYear:hover {
 
 .menu {
   width: 250px;
+  height: 100vh;
   background: #15151B;
   border-top-right-radius: 12px;
   margin-top: 15px;
   position: fixed;
   height: 100%;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-item {
@@ -17261,6 +17264,10 @@ td.rdtYear:hover {
   color: #FFFFFF;
 
   padding-left: 10px;
+}
+
+.social {
+  margin-bottom: 100px;
 }
 
 .content {
