--- a/src/App.css
+++ b/src/App.css
@@ -17327,6 +17327,38 @@ td.rdtYear:hover {
   margin: 20px 0px;
 }
 
+.sidebar {
+  position: absolute;
+  background: black;
+  width: 100%;
+  height: 100vh;
+  top: 0px;
+  left: 0;
+  z-index: 1;
+  padding-top: 50%;
+}
+
+.icon {
+  display: none;
+}
+
+.navItem {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  color: white;
+  text-decoration: none;
+  padding: 10px 18px;
+  cursor: pointer;
+}
+
+.navItem:hover {
+  color: #05EDAC;
+  text-decoration: dashed;
+}
+
 @media (max-width: 576px) {
   .main_content {
     display: unset;
@@ -17375,6 +17407,23 @@ td.rdtYear:hover {
 
   .menu-item-text {
     padding-left: 0px;
+  }
+
+  .icon {
+    display: block;
+    color: white;
+    font-size: 20px;
+    margin-right: 0px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    width: 2rem;
+    height: 2rem;
+  }
+  .close {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    z-index: 3;
   }
 }
 
