--- a/src/App.css
+++ b/src/App.css
@@ -328,7 +328,7 @@ table {
   border-collapse: separate;
   border-spacing: 0px;
   border-width: 0px;
-  border-color: #313131;
+  border-color: #313131 !important;
   font-size: 14px;
   border-radius: 6px !important;
 }
@@ -17361,6 +17361,15 @@ td.rdtYear:hover {
   text-decoration: dashed;
 }
 
+.refCard {
+  width: 450px;
+  margin-top: 25px;
+  align-self: center;
+}
+
+.refCardbody {
+  padding: 25px;
+}
 @media (max-width: 576px) {
   .main_content {
     display: unset;
@@ -17433,6 +17442,15 @@ td.rdtYear:hover {
     right: 30px;
     top: 30px;
     z-index: 3;
+  }
+
+  .refCard {
+    width: auto !important;
+    padding: 0px;
+  }
+
+  .refCardbody {
+    padding: 15px;
   }
 }
 
